mate and cinnamon bugfixes

--- a/Jade-1/gtk-3.22/apps/cinnamon-applications.css
+++ b/Jade-1/gtk-3.22/apps/cinnamon-applications.css
@@ -23,7 +23,8 @@ NemoWindow .sidebar .view,
   .nemo-window .sidebar .view, .nemo-window .sidebar iconview, .nemo-window .sidebar row {
     background-color: transparent;
     color: #ffffff; }
-    .nemo-window .sidebar .view.cell:selected, .nemo-window .sidebar iconview.cell:selected, .nemo-window .sidebar row.cell:selected {
+    .nemo-window .sidebar .view.cell:selected, .nemo-window .sidebar iconview.cell:selected, .nemo-window .sidebar row.cell:selected,
+    .nemo-window .sidebar .view.cell:selected:hover, .nemo-window .sidebar iconview.cell:selected:hover, .nemo-window .sidebar row.cell:selected:hover {
       background-color: #009966;
       color: #ffffff; }
     .nemo-window .sidebar .view.cell:hover, .nemo-window .sidebar iconview.cell:hover, .nemo-window .sidebar row.cell:hover {
@@ -40,14 +41,13 @@ NemoWindow .sidebar .view,
   border-width: 0; }
 
 .nemo-window notebook {
-  background-color: #ffffff; }
+  background-color: #d6d6d6; }
 
 .nemo-window .nemo-window-pane widget.entry {
   border: 1px solid;
   border-radius: 3px;
   color: #5c616c;
-  border-color: #5294e2;
-  background-color: #ffffff; }
+  background-color: #d6d6d6; }
 
 .nemo-window .primary-toolbar widget.raised.linked:not(.vertical):not(.path-bar) > button {
   color: rgba(207, 218, 231, 0.8);
