--- a/Jade-1/cinnamon/cinnamon.css
+++ b/Jade-1/cinnamon/cinnamon.css
@@ -1,32 +1,29 @@
-/* *********************************************************************** 
-                           O B S I D I A N  2
-              
-                            v2.4 (02.04.2018)
-                                
-                                GREEN
-                              "Bug Eyes"
-
- ------------------------------------------------------------------------
- A dark gray theme with green accents, created by MadMaxMS, based 
- upon Adwaita-Maia. 
+/* ***********************************************************************  
+                               J A D E   1
+               
+                            v3.0 (30.04.2018)
  
- Code available at Github:
- https://github.com/madmaxms/theme-obsidian-2
+  ------------------------------------------------------------------------
+  Mixed light-dark gtk theme with green color accents developed for 
+  Linux Mint based upon Obsidian 2.
+ 
+  Code available at Github:
+  https://github.com/madmaxms/theme-jade-1
  
  ------------------------------------------------------------------------
 
-# This program is free software: you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation, either version 3 of the License, or
-# (at your option) any later version.
+  This program is free software: you can whiteistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation, either version 3 of the License, or
+  (at your option) any later version. 
 
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
+  This program is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
 
-# You should have received a copy of the GNU General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+  You should have received a copy of the GNU General Public License
+  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 ************************************************************************** */
 stage {
