--- a/Jade-1/cinnamon/cinnamon.css
+++ b/Jade-1/cinnamon/cinnamon.css
@@ -1,7 +1,7 @@
 /* ***********************************************************************  
                                J A D E   1
                
-                            v3.0 (30.04.2018)
+                            v3.1 (02.05.2018)
  
   ------------------------------------------------------------------------
   Mixed light-dark gtk theme with green color accents developed for 
@@ -160,7 +160,7 @@ StScrollBar StButton#vhandle:hover
     /*border: 1px solid rgba(120, 120, 120, 1);*/
     border: 1px solid rgba(50, 50, 50, 1);
     border-radius: 4px;
-    background-color: rgba(43, 43, 43, 0.91);
+    background-color: rgba(53, 56, 56, 0.93);
     color: #fff;
     font-size: 9.5pt;
     min-width: 100px;
@@ -412,19 +412,14 @@ StScrollBar StButton#vhandle:hover
 
 .panel-top,
 .panel-bottom {
-    /*background-gradient-direction: vertical;
-    background-gradient-start: rgba(70,70,70,0.9);
-    background-gradient-end: rgba(50,50,50,0.9);*/
-    background-color: rgba(50,50,50,0.95);
+    background-color: #393f3f;
     box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.5);
 }
 
 .panel-left,
 .panel-right {
-    background-gradient-direction: horizontal;
-    background-gradient-start: rgba(70,70,70,0.9);
-    background-gradient-end: rgba(50,50,50,0.9);
-    box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.5);
+    background-color: #393f3f;
+    box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.5);
 }
 
 .panel-status-button {
@@ -862,11 +857,9 @@ StScrollBar StButton#vhandle:hover
 
 #notification {
     font-size: 8.5pt;
-    border-radius: 10px 10px 10px 10px;
-    border: 2px solid rgba(214,214,214,0.5);
-    background-gradient-direction: vertical;
-    background-gradient-start: rgba(66,66,66,0.9);
-    background-gradient-end: rgba(55,55,55,0.9);
+    border-radius: 5px;
+    border: 1px solid rgba(114, 114, 114, 0.9);
+    background-color: rgba(47, 53, 53, 0.9);
     padding: 8px 8px 8px 8px;
     spacing-rows: 10px;
     spacing-columns: 10px;
@@ -1061,6 +1054,14 @@ StScrollBar StButton#vhandle:hover
 
 .switcher-preview-backdrop {
    background-color: rgba(25,25,25,0.65);
+}
+
+.window-list-preview {
+    border-radius: 3px;
+    background-color: rgba(25,25,25,0.9);
+    border: 1px solid rgba(255,255,255,0.1);
+    padding: 10px 14px 14px 14px;
+    color: #f7f7f7; 
 }
 
 /* ===================================================================
@@ -2067,11 +2068,11 @@ StScrollBar StButton#vhandle:hover
  * Applets (applet.js)
  * ===================================================================*/
 .applet-separator {
-    padding: 5px 4px;
+    padding: 0px 2px;
 }
 .applet-separator-line {
-    width: 2px;
-    background: rgba(255,255,255,.5);
+    width: 1px;
+    background: rgba(18,22,22,0.4);
 }
 
 .applet-box {
