--- a/Jade-1/gtk-3.0/gtk.css
+++ b/Jade-1/gtk-3.0/gtk.css
@@ -2392,8 +2392,8 @@ GtkLevelBar.vertical {
   background-color: #393f3f;
   color: #f7f7f7;
   border: none;
-   
 }
+
 .menubar > .menuitem:hover {
   background-color:#029354;
   color: #FFFFFF; 
@@ -3165,7 +3165,7 @@ GtkSidebarRow .sidebar-label:dir(rtl) {
     icon-shadow: 0 -1px rgba(0, 0, 0, 0.81176);
     box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), 0 1px rgba(238, 238, 236, 0.1); }
     .spinbutton.vertical .button:last-child:active, .spinbutton.vertical:dir(rtl) .button:last-child:active {
-      color: #eeeeec;
+      color: #212121;
       outline-color: rgba(238, 238, 236, 0.3);
       border-color: #0a0a0a;
       background-color: #f7f7f7;
@@ -4714,7 +4714,7 @@ column-header.button {
  *********/
 
 .entry {
-    background-color: #f7f7f7;
+    background-color: #229966;
     background-image: linear-gradient(to bottom,
                             @entry_bg_a,
                             @entry_bg_b);
