--- a/Jade-1/cinnamon/cinnamon.css
+++ b/Jade-1/cinnamon/cinnamon.css
@@ -302,17 +302,17 @@ StScrollBar StButton#vhandle:hover
 }
 
 .toggle-switch-us {
-    background-image: url("switch-off.svg");
+    background-image: url("assets/switch-off.svg");
 }
 .toggle-switch-us:checked {
-    background-image: url("switch-on.svg");
+    background-image: url("assets/switch-on.svg");
 }
 
 .toggle-switch-intl {
-    background-image: url("switch-off.svg");
+    background-image: url("assets/switch-off.svg");
 }
 .toggle-switch-intl:checked {
-    background-image: url("switch-on.svg");
+    background-image: url("assets/switch-on.svg");
 }
 
 .nm-menu-item-icons {
@@ -510,6 +510,38 @@ StScrollBar StButton#vhandle:hover
     icon-size: 1.14em;
 }
 
+.window-list-item-demands-attention {
+    border-image: url("assets/attention.svg") 6;
+}
+
+.panel-top .window-list-item-demands-attention {
+    border-image: url("assets/attention-top.svg") 6;
+}
+
+.panel-left .window-list-item-demands-attention {
+    border-image: url("assets/attention-left.svg") 6;
+}
+
+.panel-right .window-list-item-demands-attention {
+    border-image: url("assets/attention-right.svg") 6;
+}
+
+.window-list-item-box .progress {
+    border-image: url("assets/progress.svg") 6;
+}
+
+.panel-top .window-list-item-box .progress {
+    border-image: url("assets/progress-top.svg") 6;
+}
+
+.panel-left .window-list-item-box .progress {
+    border-image: url("assets/progress-left.svg") 6;
+}
+
+.panel-right .window-list-item-box .progress {
+    border-image: url("assets/progress-right.svg") 6;
+}
+
 /* ===================================================================
  * Overview
  * ===================================================================*/
@@ -553,19 +585,19 @@ StScrollBar StButton#vhandle:hover
 }
 
 .workspace-add-button {
-    background-image: url("add-workspace.png");
+    background-image: url("assets/add-workspace.png");
     height: 200px;
     width: 35px;
     transition-duration: 300;
 }
 
 .workspace-add-button:hover {
-    background-image: url("add-workspace-hover.png");
+    background-image: url("assets/add-workspace-hover.png");
     transition-duration: 300;
 }
 
 .workspace-close-button {
-    background-image: url("close-window.svg");
+    background-image: url("assets/close-window.svg");
     height: 34px;
     width: 34px;
     -cinnamon-close-overlap: 20px;
@@ -588,7 +620,7 @@ StScrollBar StButton#vhandle:hover
 }
 
 .window-close {
-    background-image: url("close-window.svg");
+    background-image: url("assets/close-window.svg");
     height: 34px;
     width: 34px;
     -cinnamon-close-overlap: 20px;
@@ -599,7 +631,7 @@ StScrollBar StButton#vhandle:hover
 }
 
 .window-close-area {
-  background-image: url("trash-icon.png");
+  background-image: url("assets/trash-icon.png");
   background-color: rgba(60, 60, 60, 0.8);
   border: 4px solid rgba(128,128,128,0.8);
   border-bottom-width: 0px;
@@ -742,13 +774,13 @@ StScrollBar StButton#vhandle:hover
 .calendar-change-month-back {
     width: 18px;
     height: 12px;
-    background-image: url("calendar-arrow-left.svg");
+    background-image: url("assets/calendar-arrow-left.svg");
     border-radius: 4px;
     border: 1px solid rgba(0,0,0,0);
 }
 
 .calendar-change-month-back:rtl {
-    background-image: url("calendar-arrow-right.svg");
+    background-image: url("assets/calendar-arrow-right.svg");
 }
 
 .calendar-change-month-back:hover {
@@ -762,13 +794,13 @@ StScrollBar StButton#vhandle:hover
 .calendar-change-month-forward {
     width: 18px;
     height: 12px;
-    background-image: url("calendar-arrow-right.svg");
+    background-image: url("assets/calendar-arrow-right.svg");
     border-radius: 4px;
     border: 1px solid rgba(0,0,0,0);
 }
 
 .calendar-change-month-forward:rtl {
-    background-image: url("calendar-arrow-left.svg");
+    background-image: url("assets/calendar-arrow-left.svg");
 }
 
 .calendar-change-month-forward:hover {
@@ -1035,11 +1067,11 @@ StScrollBar StButton#vhandle:hover
 .ripple-box {
     width: 104px;
     height: 104px;
-    background-image: url("corner-ripple.png");
+    background-image: url("assets/corner-ripple.png");
 }
 
 .ripple-box:rtl {
-    background-image: url("corner-ripple.png");
+    background-image: url("assets/corner-ripple.png");
 }
 
 .switcher-arrow {
@@ -1865,12 +1897,10 @@ StScrollBar StButton#vhandle:hover
 
 .sound-player StButton:small:hover {
     color: rgb(255, 255, 255);
-    border-image: url("button-assets/button-hover.png") 4;
 }
 
 .sound-player StButton:small:active {
     color: rgb(255, 255, 255);
-    border-image: url("button-assets/button-pressed.png") 4;
 }
 
 .sound-player .slider {
@@ -2057,11 +2087,11 @@ StScrollBar StButton#vhandle:hover
  * Overview corner
  * ===================================================================*/
 #overview-corner {
-    background-image: url("overview.png");
+    background-image: url("assets/overview.png");
 }
 
 #overview-corner:hover {
-    background-image:  url("overview-hover.png");
+    background-image:  url("assets/overview-hover.png");
 }
 
 /* ===================================================================
@@ -2182,12 +2212,12 @@ StScrollBar StButton#vhandle:hover
 .check-box:focus StBin {
     width: 16px;
     height: 16px;
-    background-image: url("checkbox-off.svg");
+    background-image: url("assets/checkbox-off.svg");
 }
 
 .check-box:checked StBin,
 .check-box:focus:checked StBin {
-    background-image: url("checkbox.svg");
+    background-image: url("assets/checkbox.svg");
 }
 
 .check-box StLabel {
@@ -2204,13 +2234,13 @@ StScrollBar StButton#vhandle:hover
 .radiobutton:focus StBin {
     width: 16px;
     height: 16px;
-    background-image: url("radiobutton-off.svg");
+    background-image: url("assets/radiobutton-off.svg");
     border-radius: 15px;
 }
 
 .radiobutton:checked StBin,
 .radiobutton:focus:checked StBin {
-    background-image: url("radiobutton.svg");
+    background-image: url("assets/radiobutton.svg");
 }
 
 .radiobutton StLabel {
